Closed Bug 1726094 Opened 3 years ago Closed 3 years ago

js/src/jit/mips64/LIR-mips64.h:86:14: error: no member named 'UDivOrModI64' in 'js::jit::LNode::Opcode'

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -  In file included from Unified_cpp_js_src_jit0.cpp:20:
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -  In file included from /builds/worker/checkouts/gecko/js/src/jit/BacktrackingAllocator.cpp:7:
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -  In file included from /builds/worker/checkouts/gecko/js/src/jit/BacktrackingAllocator.h:15:
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -  In file included from /builds/worker/checkouts/gecko/js/src/jit/RegisterAllocator.h:12:
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -  In file included from /builds/worker/checkouts/gecko/js/src/jit/LIR.h:1944:
[task 2021-08-17T02:06:51.229Z] 02:06:51    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips64/LIR-mips64.h:86:14: error: no member named 'UDivOrModI64' in 'js::jit::LNode::Opcode'
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -    LIR_HEADER(UDivOrModI64);
[task 2021-08-17T02:06:51.229Z] 02:06:51     INFO -    ~~~~~~~~~~~^~~~~~~~~~~~~
[task 2021-08-17T02:06:51.230Z] 02:06:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/LIR.h:812:63: note: expanded from macro 'LIR_HEADER'
[task 2021-08-17T02:06:51.230Z] 02:06:51     INFO -    static constexpr LNode::Opcode classOpcode = LNode::Opcode::opcode;
[task 2021-08-17T02:06:51.230Z] 02:06:51     INFO -                                                 ~~~~~~~~~~~~~~~^
[task 2021-08-17T02:06:51.232Z] 02:06:51     INFO -  1 error generated.

Getting further along the build, it fails with:

[task 2021-08-17T03:57:41.649Z] 03:57:41     INFO -  In file included from Unified_cpp_js_src_jit12.cpp:47:
[task 2021-08-17T03:57:41.649Z] 03:57:41    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips-shared/CodeGenerator-mips-shared.cpp:1037:34: error: no member named 'temp' in 'js::jit::LPopcntI'; did you mean 'temp0'?
[task 2021-08-17T03:57:41.650Z] 03:57:41     INFO -    Register tmp = ToRegister(ins->temp());
[task 2021-08-17T03:57:41.650Z] 03:57:41     INFO -                                   ^~~~
[task 2021-08-17T03:57:41.650Z] 03:57:41     INFO -                                   temp0
[task 2021-08-17T03:57:41.651Z] 03:57:41     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: 'temp0' declared here
[task 2021-08-17T03:57:41.652Z] 03:57:41     INFO -  LIR_OPCODE_CLASS_GENERATED
[task 2021-08-17T03:57:41.653Z] 03:57:41     INFO -  ^
[task 2021-08-17T03:57:41.654Z] 03:57:41     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:1541:22: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T03:57:41.654Z] 03:57:41     INFO -    const LDefinition* temp0() { return getTemp(0); }\
[task 2021-08-17T03:57:41.654Z] 03:57:41     INFO -                       ^
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -  In file included from Unified_cpp_js_src_jit12.cpp:47:
[task 2021-08-17T03:57:41.657Z] 03:57:41    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips-shared/CodeGenerator-mips-shared.cpp:1263:32: error: no member named 'getDouble' in 'js::jit::LDouble'
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -    masm.loadConstantDouble(ins->getDouble(), ToFloatRegister(out));
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -                            ~~~  ^
[task 2021-08-17T03:57:41.657Z] 03:57:41    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips-shared/CodeGenerator-mips-shared.cpp:1268:33: error: no member named 'getFloat' in 'js::jit::LFloat32'
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -    masm.loadConstantFloat32(ins->getFloat(), ToFloatRegister(out));
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -                             ~~~  ^
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -  3 errors generated.
[task 2021-08-17T03:57:41.657Z] 03:57:41    ERROR -  make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:675: Unified_cpp_js_src_jit12.o] Error 1
[task 2021-08-17T03:57:41.657Z] 03:57:41     INFO -  make[4]: Leaving directory '/builds/worker/workspace/obj-build/js/src/jit'
[task 2021-08-17T03:57:41.657Z] 03:57:41    ERROR -  make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: js/src/jit/target-objects] Error 2
[task 2021-08-17T03:57:41.658Z] 03:57:41     INFO -  make[3]: *** Waiting for unfinished jobs....

And after that:

[task 2021-08-17T05:18:51.808Z] 05:18:51     INFO -  class LPowOfTwoI : public LInstructionHelper<1, 1, 0> {\
[task 2021-08-17T05:18:51.808Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:1620:7: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  class LPowOfTwoI : public LInstructionHelper<1, 1, 0> {\
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  In file included from Unified_cpp_js_src_jit13.cpp:2:
[task 2021-08-17T05:18:51.809Z] 05:18:51    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips-shared/Lowering-mips-shared.cpp:591:24: error: no matching constructor for initialization of 'js::jit::LAsmJSLoadHeap'
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -    define(new (alloc()) LAsmJSLoadHeap(baseAlloc, limitAlloc), ins);
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -                         ^              ~~~~~~~~~~~~~~~~~~~~~
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  LIR_OPCODE_CLASS_GENERATED
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  ^
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4101:7: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  class LAsmJSLoadHeap : public LInstructionHelper<1, 3, 0> {\
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4101:7: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.809Z] 05:18:51     INFO -  class LAsmJSLoadHeap : public LInstructionHelper<1, 3, 0> {\
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4104:12: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -    explicit LAsmJSLoadHeap(const LAllocation& ptr, const LAllocation& boundsCheckLimit, const LAllocation& memoryBase) : LInstructionHelper(classOpcode) {\
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -             ^
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  In file included from Unified_cpp_js_src_jit13.cpp:2:
[task 2021-08-17T05:18:51.810Z] 05:18:51    ERROR -  /builds/worker/checkouts/gecko/js/src/jit/mips-shared/Lowering-mips-shared.cpp:613:21: error: no matching constructor for initialization of 'js::jit::LAsmJSStoreHeap'
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -    add(new (alloc()) LAsmJSStoreHeap(baseAlloc, useRegisterAtStart(ins->value()),
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -                      ^               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor not viable: requires 4 arguments, but 3 were provided
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  LIR_OPCODE_CLASS_GENERATED
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  ^
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4118:12: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -    explicit LAsmJSStoreHeap(const LAllocation& ptr, const LAllocation& value, const LAllocation& boundsCheckLimit, const LAllocation& memoryBase) : LInstructionHelper(classOpcode) {\
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -             ^
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 3 were provided
[task 2021-08-17T05:18:51.810Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4115:7: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.811Z] 05:18:51     INFO -  class LAsmJSStoreHeap : public LInstructionHelper<1, 4, 0> {\
[task 2021-08-17T05:18:51.811Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.811Z] 05:18:51     INFO -  /builds/worker/checkouts/gecko/js/src/jit/shared/LIR-shared.h:19:1: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 3 were provided
[task 2021-08-17T05:18:51.811Z] 05:18:51     INFO -  /builds/worker/workspace/obj-build/js/src/jit/LIROpsGenerated.h:4115:7: note: expanded from macro 'LIR_OPCODE_CLASS_GENERATED'
[task 2021-08-17T05:18:51.811Z] 05:18:51     INFO -  class LAsmJSStoreHeap : public LInstructionHelper<1, 4, 0> {\
[task 2021-08-17T05:18:51.812Z] 05:18:51     INFO -        ^
[task 2021-08-17T05:18:51.812Z] 05:18:51     INFO -  3 errors generated.
[task 2021-08-17T05:18:51.812Z] 05:18:51    ERROR -  make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:675: Unified_cpp_js_src_jit13.o] Error 1
Summary: hs/src/jit/mips64/LIR-mips64.h:86:14: error: no member named 'UDivOrModI64' in 'js::jit::LNode::Opcode' → js/src/jit/mips64/LIR-mips64.h:86:14: error: no member named 'UDivOrModI64' in 'js::jit::LNode::Opcode'
Severity: -- → S4
Priority: -- → P5
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: