Bug 1726094 - Fix mips jit after bug 1699271. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D122808